--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@
 /api/__pycache__
 /api/components/__pycache__
 __pycache__
-/requirements_old.txt
+/requirements.txt_
+/dependency-tree.txt
 /test.py
+.vercel
