--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,234 @@
-apify_client
-composio_crewai
-crewai
-fastapi
-groq
-jose
-openai
-passlib
-pydantic
-python-dotenv
-python-jose
-selenium
-vercel_kv_sdk
-youtube_transcript_api
+Mako==1.3.5
+MarkupSafe==2.1.5
+PyYAML==6.0.2
+SecretStorage==3.3.3
+aiohappyeyeballs==2.4.2
+aiohttp==3.10.7
+aiosignal==1.3.1
+alembic==1.13.3
+annotated-types==0.7.0
+anyio==4.6.0
+apify-shared==1.1.2
+apify_client==1.8.1
+appdirs==1.4.4
+asgiref==3.8.1
+attrs==23.2.0
+auth0-python==4.7.2
+backoff==2.2.1
+bcrypt==4.2.0
+beautifulsoup4==4.12.3
+boto3==1.35.29
+botocore==1.35.29
+build==1.2.2
+cachecontrol==0.14.0
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+chroma-hnswlib==0.7.3
+chromadb==0.4.24
+cleo==2.1.0
+click==8.1.7
+cohere==5.10.0
+coloredlogs==15.0.1
+composio-core==0.5.28
+composio-langchain==0.5.28
+composio_crewai==0.5.28
+crashtest==0.4.1
+crewai==0.65.2
+cryptography==43.0.1
+dataclasses-json==0.6.7
+deprecated==1.2.14
+distlib==0.3.8
+distro==1.9.0
+docker==7.1.0
+docstring-parser==0.16
+dulwich==0.21.7
+durationpy==0.7
+e2b==0.17.2a60
+e2b-code-interpreter==0.0.10
+ecdsa==0.19.0
+embedchain==0.1.122
+fastapi==0.115.0
+fastavro==1.9.7
+fastjsonschema==2.20.0
+filelock==3.16.1
+flatbuffers==24.3.25
+frozenlist==1.4.1
+fsspec==2024.9.0
+google-api-core==2.20.0
+google-auth==2.35.0
+google-cloud-aiplatform==1.68.0
+google-cloud-bigquery==3.26.0
+google-cloud-core==2.4.1
+google-cloud-resource-manager==1.12.5
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
+gptcache==0.1.44
+gql==3.5.0
+graphql-core==3.2.4
+greenlet==3.1.1
+groq==0.11.0
+grpc-google-iam-v1==0.13.1
+grpcio==1.66.1
+grpcio-status==1.62.3
+grpcio-tools==1.62.3
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.2
+httpx-sse==0.4.0
+huggingface-hub==0.25.1
+humanfriendly==10.0
+hyperframe==6.0.1
+idna==3.10
+importlib-metadata==8.4.0
+importlib-resources==6.4.5
+inflection==0.5.1
+installer==0.7.0
+instructor==1.3.3
+jaraco.classes==3.4.0
+jeepney==0.8.0
+jinja2==3.1.4
+jiter==0.4.2
+jmespath==1.0.1
+jose==1.0.0
+json-repair==0.25.3
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonref==1.1.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+keyring==24.3.1
+kubernetes==31.0.0
+langchain==0.2.16
+langchain-cohere==0.1.9
+langchain-community==0.2.17
+langchain-core==0.2.41
+langchain-experimental==0.0.65
+langchain-openai==0.1.25
+langchain-text-splitters==0.2.4
+langchainhub==0.1.21
+langsmith==0.1.129
+litellm==1.48.5
+markdown-it-py==3.0.0
+marshmallow==3.22.0
+mdurl==0.1.2
+mem0ai==0.1.16
+mmh3==5.0.1
+monotonic==1.6
+more-itertools==10.5.0
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+neo4j==5.25.0
+numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.19.2
+openai==1.50.2
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-exporter-otlp-proto-http==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
+orjson==3.10.7
+outcome==1.3.0.post0
+overrides==7.7.0
+packaging==24.1
+pandas==2.2.3
+parameterized==0.9.0
+paramiko==3.5.0
+passlib==1.7.4
+pexpect==4.9.0
+pkginfo==1.11.1
+platformdirs==4.3.6
+poetry==1.8.3
+poetry-core==1.9.0
+poetry-plugin-export==1.8.0
+portalocker==2.10.1
+posthog==3.6.6
+proto-plus==1.24.0
+protobuf==4.25.5
+ptyprocess==0.7.0
+pulsar-client==3.5.0
+pyasn1==0.6.1
+pyasn1-modules==0.4.1
+pycparser==2.22
+pydantic==2.9.2
+pydantic-core==2.23.4
+pygments==2.18.0
+pyjwt==2.9.0
+pynacl==1.5.0
+pypdf==4.3.1
+pyperclip==1.9.0
+pypika==0.48.9
+pyproject-hooks==1.1.0
+pysbd==0.3.4
+pysher==1.0.8
+pysocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-jose==3.3.0
+pytz==2024.2
+qdrant-client==1.11.3
+rank-bm25==0.2.2
+rapidfuzz==3.10.0
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.8.1
+rpds-py==0.20.0
+rsa==4.9
+s3transfer==0.10.2
+schema==0.7.7
+semver==3.0.2
+sentry-sdk==2.14.0
+shapely==2.0.6
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+sqlalchemy==2.0.35
+starlette==0.38.6
+sympy==1.13.3
+tabulate==0.9.0
+tenacity==8.5.0
+tiktoken==0.7.0
+tokenizers==0.20.0
+tomlkit==0.13.2
+tqdm==4.66.5
+trio==0.26.2
+trio-websocket==0.11.1
+trove-classifiers==2024.9.12
+typer==0.12.5
+types-requests==2.32.0.20240914
+typing-extensions==4.12.2
+typing-inspect==0.9.0
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.31.0
+uvloop==0.20.0
+vercel_kv_sdk==0.1.2
+virtualenv==20.26.6
+watchfiles==0.24.0
+websocket-client==1.8.0
+websockets==13.1
+wrapt==1.16.0
+wsproto==1.2.0
+yarl==1.13.1
+youtube_transcript_api==0.6.2
+zipp==3.20.2
