--- a/requirements.txt
+++ b/requirements.txt
@@ -181,6 +181,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
 pytz==2024.2
+pywin32==308
 qdrant-client==1.11.3
 rank-bm25==0.2.2
 rapidfuzz==3.10.0
@@ -221,7 +222,6 @@ typing-inspect==0.9.0
 tzdata==2024.2
 urllib3==2.2.3
 uvicorn==0.31.0
-uvloop==0.20.0
 vercel_kv_sdk==0.1.2
 virtualenv==20.26.6
 watchfiles==0.24.0
